--- a/views/pizza.html
+++ b/views/pizza.html
@@ -36,7 +36,7 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="images/pizzeria.jpg" width="414" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+        <img src="images/pizzeria-min.jpg" width="414" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -104,7 +104,7 @@
         <div id="randomPizzas" class="row">
           <div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
            <div class="col-md-6">
-              <img src="images/pizza.png" width="232" height="300" class="img-responsive">
+              <img src="images/pizza-min.png" width="232" height="300" class="img-responsive">
             </div>
              
             <div class="col-md-6">
@@ -123,7 +123,7 @@
           <div id="pizza1" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
            <div class="col-md-6">
             
-              <img src="images/pizza.png" class="img-responsive">
+              <img src="images/pizza-min.png" class="img-responsive">
             </div>
             <div class="col-md-6">
               <h4>The Cameron Special</h4>
