--- a/views/pizza.html
+++ b/views/pizza.html
@@ -36,7 +36,7 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="images/pizzeria-min.jpg" width="414" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano%27s_Pizzeria_pizza_Dec-2013.JPG/800px-HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano%27s_Pizzeria_pizza_Dec-2013.JPG" width="414" class="img-responsive"> 
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -138,8 +138,7 @@
       </div>
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
-  </div>
-  <script async src="js/main.js"></script>
+    < script async src="js/main.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
 </body>
