--- a/views/pizza.html
+++ b/views/pizza.html
@@ -36,7 +36,7 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano%27s_Pizzeria_pizza_Dec-2013.JPG/800px-HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano%27s_Pizzeria_pizza_Dec-2013.JPG" width="414" class="img-responsive"> 
+        <img src="views/images/pizzeria-min-min.jpg" class="img-responsive"> 
       </div>
       <div class="col-md-8">
         <div class="row">
