--- a/views/pizza.html
+++ b/views/pizza.html
@@ -36,12 +36,8 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-<<<<<<< HEAD
-        <img src="views/images/pizzeria-min-min.jpg"> 
-=======
-        <img src="views/images/pizzeria-min-min.jpg" " width="414" class="img-responsive"> 
->>>>>>> 7cd40538d0da4f9b6cd97f000cd868db3a20af08
-      </div>
+        <img src="views/images/pizzeria-min-min.jpg" class="img-responsive"> 
+        </div>
       <div class="col-md-8">
         <div class="row">
           <div class="col-md-12">
@@ -126,7 +122,6 @@
           </div>
           <div id="pizza1" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
            <div class="col-md-6">
-            
               <img src="images/pizza-min.png" class="img-responsive">
             </div>
             <div class="col-md-6">
@@ -142,7 +137,7 @@
       </div>
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
-    < script async src="js/main.js"></script>
+    <script async src="js/main.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
 </body>
