--- a/views/pizza.html
+++ b/views/pizza.html
@@ -3,8 +3,9 @@
 <head>
  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
-
 <body>
   <div class="container">
     <div id="header" class="row">
@@ -36,8 +37,8 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="views/images/pizzeria-min-min.jpg" class="img-responsive"> 
-        </div>
+        <img src="images/pizzeria-min-min.jpg" width="410" height="307" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+      </div>
       <div class="col-md-8">
         <div class="row">
           <div class="col-md-12">
@@ -98,16 +99,15 @@
           </div>
           <div id="pizzaSize" class="col-md-6">Medium</div>
           <div class="col-md-12">
-            <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)">
+            <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"></input>
           </div>
         </div>
         <div id="randomPizzas" class="row">
           <div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
-           <div class="col-md-6">
+            <div style="width:35%">
               <img src="images/pizza-min.png" width="232" height="300" class="img-responsive">
             </div>
-             
-            <div class="col-md-6">
+            <div style="width:65%">
               <h4>The Udacity Special</h4>
               <ul>
                 <li>Turkey</li>
@@ -120,11 +120,11 @@
               </ul>
             </div>
           </div>
-          <div id="pizza1" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
-           <div class="col-md-6">
-              <img src="images/pizza-min.png" class="img-responsive">
+          <div id="pizza1" class="randomPizzaContainer" style="width:33.33%">
+            <div style="width:65%">
+             <img src="images/pizza-min.png" width="232" height="300" class="img-responsive">
             </div>
-            <div class="col-md-6">
+            <div style="width:65%">
               <h4>The Cameron Special</h4>
               <ul>
                 <li>Chicken</li>
@@ -137,9 +137,9 @@
       </div>
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
-    <script async src="js/main.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/bootstrap-grid.css">
+  </div>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 
+</html>
 </html>
