--- a/views/pizza.html
+++ b/views/pizza.html
@@ -2,9 +2,8 @@
 <html>
 <head>
  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/bootstrap-grid.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  
 </head>
 <body>
   <div class="container">
@@ -99,7 +98,7 @@
           </div>
           <div id="pizzaSize" class="col-md-6">Medium</div>
           <div class="col-md-12">
-            <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"></input>
+              <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"> </div>
           </div>
         </div>
         <div id="randomPizzas" class="row">
@@ -137,9 +136,9 @@
       </div>
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
-  </div>
+    <link href="css/style.css" rel="stylesheet" media="screen,handheld">
+  <link rel="stylesheet" href="css/bootstrap-grid.css">
   <script type="text/javascript" src="js/main.js"></script>
 </body>
+</html>
 
-</html>
-</html>
