--- a/views/pizza.html
+++ b/views/pizza.html
@@ -98,7 +98,7 @@
           </div>
           <div id="pizzaSize" class="col-md-6">Medium</div>
           <div class="col-md-12">
-              <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"> </div>
+              <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)">
           </div>
         </div>
         <div id="randomPizzas" class="row">
@@ -139,6 +139,7 @@
     <link href="css/style.css" rel="stylesheet" media="screen,handheld">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
   <script type="text/javascript" src="js/main.js"></script>
+    </div>
 </body>
 </html>
 
