--- a/views/pizza.html
+++ b/views/pizza.html
@@ -136,10 +136,11 @@
       </div>
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
-    <link href="css/style.css" rel="stylesheet" media="screen,handheld">
+    <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
   <script type="text/javascript" src="js/main.js"></script>
     </div>
+    
 </body>
 </html>
 
