--- a/views/pizza.html
+++ b/views/pizza.html
@@ -3,7 +3,6 @@
 <head>
  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  
 </head>
 <body>
   <div class="container">
@@ -98,7 +97,7 @@
           </div>
           <div id="pizzaSize" class="col-md-6">Medium</div>
           <div class="col-md-12">
-              <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)">
+              <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"></input>
           </div>
         </div>
         <div id="randomPizzas" class="row">
@@ -136,11 +135,12 @@
       </div>
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
+    </div>
+    <script type="text/javascript" src="js/main.js"></script>
     <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
-  <script type="text/javascript" src="js/main.js"></script>
-    </div>
-    
+  
 </body>
 </html>
+
 
