--- a/views/pizza.html
+++ b/views/pizza.html
@@ -140,9 +140,12 @@
 		</div>
 		<div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
 	</div>
-	<script async src="js/main.js" type="text/javascript"></script>
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-grid.css">
+	<script async src="js/perfmatters.js">
+	</script>
+	<script src="js/main.js" type="text/javascript"></script>
+	
 </body>
 
 </html>
