--- a/views/pizza.html
+++ b/views/pizza.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
 
 <body>
@@ -24,7 +26,7 @@
 								<form action="#locations">
 									<input type="submit" value="Locations">
 								</form>
-								<form action="#" onsubmit="alert('Thanks for clicking! This button doesn\'t do anything because this is a fake pizzeria :\)')">
+								<form action="#" onsubmit="alert('Thanks for clicking! This button doesn't do anything because this is a fake pizzeria :)')">
 									<input type="submit" value="Contact Us">
 								</form>
 							</div>
@@ -37,7 +39,6 @@
 		<div id="callToAction" class="row">
 			<div class="col-md-4">
 				<img src="images/pizzeria.jpg" width="410" height="307" class="img-responsive">
-				<!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
 			</div>
 			<div class="col-md-8">
 				<div class="row">
@@ -140,12 +141,8 @@
 		</div>
 		<div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
 	</div>
-	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/bootstrap-grid.css">
-	<script async src="js/perfmatters.js">
-	</script>
+	<script async src="js/perfmatters.js"></script>
 	<script src="js/main.js" type="text/javascript"></script>
-	
 </body>
 
 </html>
