--- a/views/pizza.html
+++ b/views/pizza.html
@@ -5,8 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/bootstrap-grid.css">
-</head>
+	<link rel="stylesheet" href="css/bootstrap-grid.css"> </head>
 
 <body>
 	<div class="container">
@@ -17,18 +16,10 @@
 						<h1>Cam's Pizzeria</h1>
 						<div class="row">
 							<div id="menu" class="col-md-12">
-								<form action="#randomPizzas">
-									<input type="submit" value="Menu">
-								</form>
-								<form action="#ingredients">
-									<input type="submit" value="Our Ingredients">
-								</form>
-								<form action="#locations">
-									<input type="submit" value="Locations">
-								</form>
-								<form action="#" onsubmit="alert('Thanks for clicking! This button doesn't do anything because this is a fake pizzeria :)')">
-									<input type="submit" value="Contact Us">
-								</form>
+								<form action="#randomPizzas"> <input type="submit" value="Menu"> </form>
+								<form action="#ingredients"> <input type="submit" value="Our Ingredients"> </form>
+								<form action="#locations"> <input type="submit" value="Locations"> </form>
+								<form action="#" onsubmit="alert('Thanks for clicking! This button doesn't do anything because this is a fake pizzeria :)')"> <input type="submit" value="Contact Us"> </form>
 							</div>
 						</div>
 					</div>
@@ -37,9 +28,7 @@
 			<div id="movingPizzas1" class="col-md-6"></div>
 		</div>
 		<div id="callToAction" class="row">
-			<div class="col-md-4">
-				<img src="images/pizzeria.jpg" width="410" height="307" class="img-responsive">
-			</div>
+			<div class="col-md-4"> <img src="images/pizzeria.jpg" width="410" height="307" class="img-responsive"> </div>
 			<div class="col-md-8">
 				<div class="row">
 					<div class="col-md-12">
@@ -50,9 +39,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-md-push-3">
-						<form action="#randomPizzas">
-							<input type="submit" value="Pick a Pizza Now!">
-						</form>
+						<form action="#randomPizzas"> <input type="submit" value="Pick a Pizza Now!"> </form>
 					</div>
 				</div>
 			</div>
@@ -79,17 +66,11 @@
 				<div class="row">
 					<div class="col-md-6">
 						<h3>Pizza Road</h3>
-						<p>1800 Pizza Road
-							<br>San Francisco, CA
-							<br>01010
-							<br>555-555-5555</p>
+						<p>1800 Pizza Road <br>San Francisco, CA <br>01010 <br>555-555-5555</p>
 					</div>
 					<div class="col-md-6">
 						<h3>Classic Pie Way</h3>
-						<p>999 Classic Pie Way
-							<br>New York, NY
-							<br>00100
-							<br>555-555-5555</p>
+						<p>999 Classic Pie Way <br>New York, NY <br>00100 <br>555-555-5555</p>
 					</div>
 				</div>
 			</div>
@@ -98,18 +79,14 @@
 			<div class="col-md-12">
 				<h2 style="text-align: center">Our Pizzas!</h2>
 				<div class="row">
-					<div class="col-md-12"> <em>What size pizza would you like? Use the slider below to change pizza sizes.</em>
-					</div>
+					<div class="col-md-12"> <em>What size pizza would you like? Use the slider below to change pizza sizes.</em> </div>
 					<div id="pizzaSize" class="col-md-6">Medium</div>
-					<div class="col-md-12">
-						<input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"></input>
+					<div class="col-md-12"> <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"></input>
 					</div>
 				</div>
 				<div id="randomPizzas" class="row">
 					<div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
-						<div style="width:35%">
-							<img src="images/pizza.png" width="232" height="300" class="img-responsive">
-						</div>
+						<div style="width:35%"> <img src="images/pizza.png" width="232" height="300" class="img-responsive"> </div>
 						<div style="width:65%">
 							<h4>The Udacity Special</h4>
 							<ul>
@@ -124,9 +101,7 @@
 						</div>
 					</div>
 					<div id="pizza1" class="randomPizzaContainer" style="width:33.33%">
-						<div style="width:65%">
-							<img src="images/pizza.png" width="232" height="300" class="img-responsive">
-						</div>
+						<div style="width:65%"> <img src="images/pizza.png" width="232" height="300" class="img-responsive"> </div>
 						<div style="width:65%">
 							<h4>The Cameron Special</h4>
 							<ul>
